--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "openai": "^6.10.0"
   },
   "author": "",
   "license": "ISC"
